css/styles.css
/* ... */
.footer-social-link:hover,
.footer-social-link:focus {
  /* Visual */
  background-color: var(--color-green);
}

.footer-social-icon {
  /* Box model */
  width: 24px;
  height: 24px;

  /* Visual */
  fill: var(--color-cloud);
}

.footer-icon-list {
  /* Positioning */
  display: flex;

  /* Box model */
  gap: 24px;
}

.footer-icon {
  /* Visual */
  fill: var(--color-cloud);
}

/* #region Footer Form */
.footer-form-wrapper {
  /* Box model */
  display: flex;

  /* Positioning */
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.footer-form-title {
  /* Box model */
  margin-bottom: 16px;

  /* Typography */
  color: var(--color-white);
  font-weight: var(--fw-medium);
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: var(--ls-s);
}

.footer-form {
  /* Positioning */
  margin-left: auto;

  /* Box model */
  display: flex;
  gap: 24px;
}

.footer-form-label {
  /* Positioning */
  display: flex;
  flex-direction: column;
}

.footer-form-input {
  /* Box model */
  width: 264px;
  height: 40px;
  padding-left: 16px;

  /* Typography */
  color: var(--color-white);
  font-size: 12px;
  line-height: 2;
  letter-spacing: var(--ls-l);

  /* Visual */
  border: 1px solid var(--color-white);
  border-radius: var(--radius-s);
  background-color: transparent;
  box-shadow: var(--shadow-btn);
  outline: none;

  /* Misc */
  transition: border-color var(--transition-base);
}

.footer-form-input::placeholder {
  /* Typography */
  color: var(--color-white);
}

.footer-form-input:hover,
.footer-form-input:focus {
  /* Visual */
  border-color: var(--color-iris);
}

.footer-form-button {
  /* Positioning */
  display: flex;
  justify-content: center;
  align-items: center;

  /* Box model */
  min-width: 165px;
  height: 40px;

  /* Typography */
  color: var(--color-white);
  font-family: var(--ff-base);
  font-size: 16px;
  font-weight: var(--fw-medium);
  line-height: 1.5;
  letter-spacing: var(--ls-l);

  /* Visual */
  border: none;
  border-radius: var(--radius-s);
  background-color: var(--color-iris);
  cursor: pointer;

  /* Misc */
  transition: background-color var(--transition-base);
}

.footer-form-button:hover,
.footer-form-button:focus {
  /* Visual */
  background-color: var(--color-ocean);
}

.footer-form-button:focus-visible {
  /* Visual */
  outline: 2px solid var(--color-ocean);
  outline-offset: 2px;
}

.footer-form-icon {
  /* Box model */
  margin-left: 16px;

  /* Box model */
  width: 24px;
  height: 24px;

  /* Visual */
  fill: var(--color-white);
}

/* #endregion Footer Form */

/* #endregion Footer */

/* #region Modal */
.modal-overlay {
  /* Positioning */
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;

  /* Box model */
  width: 100%;
  height: 100%;
  display: flex;

  /* Positioning */
  justify-content: center;
  align-items: center;

  /* Visual */
  background-color: var(--overlay-bg);

  /* Misc */
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition: opacity var(--transition-base), visibility var(--transition-base);
}

.modal-overlay.is-open {
  /* Misc */
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}

.modal {
  /* Positioning */
  position: absolute;
  top: 50%;
  left: 50%;

  /* Box model */
  width: 408px;
  min-height: 584px;
  padding: 72px 24px 24px 24px;

  /* Visual */
  background: var(--color-modal-bg);
  border-radius: var(--radius-s);
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
    0px 2px 1px rgba(0, 0, 0, 0.2);

  /* Misc */
  transform: translate(-50%, -50%);
  transition: transform var(--transition-base);
}

.modal-title {
  /* Box model */
  margin-bottom: 16px;

  /* Typography */
  color: var(--color-navy-blue);
  font-weight: var(--fw-medium);
  font-size: 16px;
  line-height: 1.5;
  text-align: center;
}

.modal-text {
  /* Typography */
  font-weight: var(--fw-medium);
  text-align: center;
  letter-spacing: var(--ls-s);
  color: var(--color-navy-blue);
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 1.5;
}

.modal-form {
  /* Positioning */
  display: flex;
  flex-direction: column;

  /* Box model */
  gap: 16px;
}

.modal-field {
  /* Positioning */
  display: flex;
  flex-direction: column;
  margin-bottom: 8px;
}

.modal-form .modal-field:nth-of-type(4) {
  /* Box model */
  margin-bottom: 16px;
}

.modal-label {
  /* Typography */
  color: var(--color-light-slate);
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: var(--ls-l);
  margin-bottom: 4px;
  display: block;
}

.modal-input-wrapper {
  /* Positioning */
  position: relative;
}

.modal-input {
  /* Box model */
  width: 100%;
  height: 40px;
  padding: 8px 16px 8px 38px;

  /* Typography */
  color: var(--color-navy-blue);
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: var(--ls-l);

  /* Visual */
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: var(--radius-s);
  background-color: transparent;
  outline: transparent;

  /* Misc */
  transition: border-color var(--transition-base);
}

.modal-input:focus {
  /* Visual */
  border-color: var(--color-iris);
}

.modal-textarea {
  /* Box model */
  width: 100%;
  height: 120px;
  padding: 8px 16px;
  resize: none;

  /* Typography */
  color: rgba(46, 47, 66, 0.4);
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: var(--ls-l);

  /* Visual */
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: var(--radius-s);
  background-color: transparent;
  outline: transparent;

  /* Misc */
  transition: border-color var(--transition-base);
}

.modal-textarea:focus {
  /* Visual */
  border-color: var(--color-iris);
}

.modal-input-icon {
  /* Positioning */
  position: absolute;
  top: 50%;
  left: 16px;
  transform: translateY(-50%);

  /* Box model */
  width: 18px;
  height: 24px;

  /* Visual */
  fill: var(--color-navy-blue);

  /* Misc */
  pointer-events: none;
  transition: fill var(--transition-base);
}
/* ... */

